syntax = "proto3";
package remote.messages;

message Envelope {
    uint32 id = 1;
    optional uint32 responding_to = 2;

    oneof payload {
        Error error = 3;
        string string = 4;
        Ping ping = 5;
        Pong pong = 6;
        ReadFile read_file = 7;
        ReadDir read_dir = 8;
        ReadLink read_link = 9;
        Canonicalize canonicalize = 10;
        Stat stat = 11;
        Metadata metadata = 12;
        Watch watch = 13;
        Event event = 14;
        WriteFile write_file = 15;
    }
}

message Ping {}

message Pong {}

message Error {
    string message = 1;
}

message ReadFile {
    string path = 1;
}

message WriteFile {
    string path = 1;
    string content = 2;
    LineEnding line_ending = 3;

    enum LineEnding {
        Unix = 0;
        Windows = 1;
    }
}

message ReadDir {
    string path = 1;
}

message ReadLink {
    string path = 1;
}

message Canonicalize {
    string path = 1;
}

message Watch {
    string path = 1;
    uint64 latency = 2;
}

message Stat {
    string path = 1;
}

message Metadata {
    uint64 inode = 1;
    uint64 mtime = 2;
    bool is_symlink = 3;
    bool is_dir = 4;
}

message Event {
    repeated string paths = 1;
}
